Downsize images into collage

--- a/index.html
+++ b/index.html
@@ -26,31 +26,33 @@
     </div>
 
     <div id="mainmatter">
-      <div class="slide">
-        <div class="slide-img" id="img-ourbabies"></div>
-        <div class="slide-txt">
-          Our babies = your veggies
+      <div id="collage">
+        <div class="slide">
+          <div class="slide-img" id="img-ourbabies"></div>
+          <div class="slide-txt">
+            Our babies = your veggies
+          </div>
         </div>
-      </div>
 
-      <div class="slide">
-        <div class="slide-img" id="img-overcoming"></div>
-        <div class="slide-txt">
-          Overcoming limitations of growing organic vegetables on soil
+        <div class="slide">
+          <div class="slide-img" id="img-overcoming"></div>
+          <div class="slide-txt">
+            Overcoming limitations of growing organic vegetables on soil
+          </div>
         </div>
-      </div>
 
-      <div class="slide">
-        <div class="slide-img" id="img-deepsat"></div>
-        <div class="slide-txt">
-          A deeply satisfying, nourishing, and truly sustainable way of living
+        <div class="slide">
+          <div class="slide-img" id="img-deepsat"></div>
+          <div class="slide-txt">
+            A deeply satisfying, nourishing, and truly sustainable way of living
+          </div>
         </div>
-      </div>
 
-      <div class="slide">
-        <div class="slide-img" id="img-celebrating"></div>
-        <div class="slide-txt">
-          Celebrating a healthy lifestyle
+        <div class="slide">
+          <div class="slide-img" id="img-celebrating"></div>
+          <div class="slide-txt">
+            Celebrating a healthy lifestyle
+          </div>
         </div>
       </div>
 
