Fix some links; fix "shopping experience"

--- a/index.html
+++ b/index.html
@@ -55,10 +55,21 @@
       </div>
 
       <div id="shopping">
-        <h1>Jolly Green Farm Shopping Experience</h1>
         <!-- Fix links -->
-        <p>See what's available next week on <a href="#" target="_blank">
-          our weekly catalogue on Facebook</a>! 😊</p>
+        <h1><a href="#" target="_blank">Jolly Green Farm Shopping
+            Experience</a></h1>
+        <div id="amisrtbl">
+          <div id="amisrsbj">
+            <p>See what's available this week on our weekly menu</p>
+            <div class="thai">
+              <p>สัปดาห์นี้มีอะไรให้ช๊อป</p>
+            </div>
+          </div>
+
+          <div id="amisrvrb">
+            @ <a href="#" target="_blank">Facebook</a>
+          </div>
+        </div>
       </div>
 
     
@@ -113,10 +124,11 @@
         
         <!-- Fix links -->
         <ul>
-          <li><strong>Follow us</strong> on <a href="#"
-                                               target="_blank">Facebook</a></li>
-          <li><strong>Add us</strong> on <a href="#"
-                                            target="_blank">LINE@</a></li>
+          <li><strong>Follow us</strong> on <a
+          href="https://facebook.com/JollyGreenFarm"
+          target="_blank">Facebook</a></li>
+          <li><strong>Add us</strong> on <a
+          href="#" target="_blank">LINE@</a></li>
         </ul>
 
       </div>
