Fix "Shopping Experience"

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 
       <div id="shopping">
         <!-- Fix links -->
-        <h1><a href="#" target="_blank">Jolly Green Farm Shopping
+        <h1><a
+            href="https://www.facebook.com/JollyGreenFarm/posts/1697015966999389"
+            target="_blank">Jolly Green Farm Shopping
             Experience</a></h1>
         <div id="amisrtbl">
           <div id="amisrsbj">
@@ -69,7 +71,9 @@
           </div>
 
           <div id="amisrvrb">
-            @ <a href="#" target="_blank">Facebook</a>
+            @ <a
+              href="https://www.facebook.com/JollyGreenFarm/posts/1697015966999389"
+              target="_blank">Facebook</a>
           </div>
         </div>
       </div>
