Add mobile layout for "Your veggies"

--- a/your-veggies.html
+++ b/your-veggies.html
@@ -26,8 +26,8 @@
     </div>
 
     <div id="mainmatter">
+      <article>
       <h1 id="pagetitle">Meet your veggies</h1>
-
       <section>
         <div class="secthead2"> <img src="images/your-veggies/10greenoakleaf.png"
           alt="Green Oakleaf"> <img src="images/your-veggies/11redoakleaf.png"
@@ -424,17 +424,13 @@
           </div>
         </div>
       </section>
+      </article>
 
-      <!--<div id="shopping">
-        <h1>Jolly Green Farm Shopping Experience</h1>
+       <div id="shopping">
         <!-- Fix links -->
-        <p>See what's available next week on <a href="#" target="_blank">
-          our weekly catalogue on Facebook</a>! 😊</p>
-      </div>-->
-
-      <div id="shopping">
-        <!-- Fix links -->
-        <h1><a href="#" target="_blank">Jolly Green Farm Shopping
+        <h1><a
+            href="https://www.facebook.com/JollyGreenFarm/posts/1697015966999389"
+            target="_blank">Jolly Green Farm Shopping
             Experience</a></h1>
         <div id="amisrtbl">
           <div id="amisrsbj">
@@ -445,11 +441,12 @@
           </div>
 
           <div id="amisrvrb">
-            @ <a href="#" target="_blank">Facebook</a>
+            @ <a
+              href="https://www.facebook.com/JollyGreenFarm/posts/1697015966999389"
+              target="_blank">Facebook</a>
           </div>
         </div>
       </div>
-
     
     </div>
     <div id="backmatter">
