Add ToC to "Your Veggies"

--- a/your-veggies.html
+++ b/your-veggies.html
@@ -28,7 +28,26 @@
     <div id="mainmatter">
       <article>
       <h1 id="pagetitle">Meet your veggies</h1>
-      <section>
+
+      <div id="toc">
+        <ul>
+          <li><a href="#oakleaf">Oakleaf</a></li>
+          <li><a href="#cos">Cos</a></li>
+          <li><a href="#coral">Coral</a></li>
+          <li><a href="#frillice">Frillice</a></li>
+          <li><a href="#butterhead">Butter Head</a></li>
+          <li><a href="#batavia">Batavia</a></li>
+          <li><a href="#saladbowl">Salad Bowl</a></li>
+          <li><a href="#lettuce">Lettuce</a></li>
+          <li><a href="#grapid">Grand Rapid</a></li>
+          <li><a href="#amaranth">Amaranth</a></li>
+          <li><a href="#kale">Kale</a></li>
+          <li>💕</li>
+        </ul>
+        
+      </div>
+
+      <section id="oakleaf">
         <div class="secthead2"> <img src="images/your-veggies/10greenoakleaf.png"
           alt="Green Oakleaf"> <img src="images/your-veggies/11redoakleaf.png"
           alt="Red Oakleaf"> </div>
@@ -57,7 +76,7 @@
         </div>
       </section>
 
-      <section>
+      <section id="cos">
         <div class="secthead3">
           <img src="images/your-veggies/12greencos.png" alt="Green Cos">
           <img src="images/your-veggies/13redcos.png" alt="Red Cos">
@@ -93,7 +112,7 @@
         </div>
       </section>
 
-      <section>
+      <section id="coral">
         <div class="secthead2">
           <img src="images/your-veggies/15greencoral.png" alt="Green Coral">
           <img src="images/your-veggies/16redcoral.png" alt="Red Coral">
@@ -128,7 +147,7 @@
         </div>
       </section>
 
-      <section>
+      <section id="frillice">
         <div class="secthead2">
           <img src="images/your-veggies/17frillice.png" alt="Frillice 1">
           <img src="images/your-veggies/18frillice.png" alt="Frillice 2">
@@ -164,7 +183,7 @@
         </div>
       </section>
 
-      <section>
+      <section id="butterhead">
         <div class="secthead2">
           <img src="images/your-veggies/19butterhead.png" alt="Butter Head 1">
           <img src="images/your-veggies/20butterhead.png" alt="Butter Head 2">
@@ -198,7 +217,7 @@
         </div>
       </section>
 
-      <section>
+      <section id="batavia">
         <div class="secthead2">
           <img src="images/your-veggies/21greenbatavia.png" alt="Green Batavia">
           <img src="images/your-veggies/22redbatavia.png" alt="Red Batavia">
@@ -239,7 +258,7 @@
         </div>
       </section>
 
-      <section>
+      <section id="saladbowl">
         <div class="secthead2">
           <img src="images/your-veggies/23greenbowl.png" alt="Green Bowl">
           <img src="images/your-veggies/24redbowl.png" alt="Red Bowl">
@@ -266,7 +285,7 @@
         </div>
       </section>
 
-      <section>
+      <section id="lettuce">
         <div class="secthead3">
           <img src="images/your-veggies/25greenlettuce.png" alt="Green Lettuce">
           <img src="images/your-veggies/26purplelettuce.png" alt="Purple
@@ -314,7 +333,7 @@
         </div>
       </section>
 
-      <section>
+      <section id="grapid">
         <div class="secthead">
           <img src="images/your-veggies/28grandrapid.png" alt="Grand Rapid">
         </div>
@@ -332,7 +351,7 @@
         </div>
       </section>
 
-      <section>
+      <section id="amaranth">
         <div class="secthead">
           <img src="images/your-veggies/29amaranth.png" alt="Amaranth">
         </div>
@@ -379,7 +398,7 @@
         </div>
       </section>
 
-      <section>
+      <section id="kale">
         <div class="secthead">
           <img src="images/your-veggies/30kale.png" alt="Kale">
         </div>
