--- a/your-veggies.html
+++ b/your-veggies.html
@@ -31,20 +31,31 @@
 
       <div id="toc">
         <ul>
-          <li><a href="#oakleaf">Oakleaf</a></li>
-          <li><a href="#cos">Cos</a></li>
-          <li><a href="#coral">Coral</a></li>
-          <li><a href="#frillice">Frillice</a></li>
-          <li><a href="#butterhead">Butter Head</a></li>
-          <li><a href="#batavia">Batavia</a></li>
-          <li><a href="#saladbowl">Salad Bowl</a></li>
-          <li><a href="#lettuce">Lettuce</a></li>
-          <li><a href="#grapid">Grand Rapid</a></li>
-          <li><a href="#amaranth">Amaranth</a></li>
-          <li><a href="#kale">Kale</a></li>
+          <li><a href="#oakleaf">Oakleaf (<span
+                class="thai">โอ๊คลีฟ</span>)</a></li> <li><a href="#cos">Cos
+              (<span class="thai">คอส</span>)</a></li> <li><a
+              href="#coral">Coral (<span class="thai">โครอล</span>)</a></li>
+          <li><a href="#frillice">Frillice (<span
+                 class="thai">ฟิลเลย์</span>)</a></li> <li><a
+               href="#butterhead">Butter Head (<span
+                 class="thai">บัตเตอร์เฮด</span>)</a></li> <li><a
+                 href="#batavia">Batavia (<span
+                   class="thai">ปัตตาเวีย</span>)</a></li> <li><a
+                 href="#saladbowl">Salad Bowl (<span
+                 class="thai">สลัดโบวล์</span>)</a></li> <li><a
+               href="#lettuce">Lettuce (<span
+                 class="thai">ผักกาดหอม</span>)</a></li> <li><a
+               href="#grapid">Grand Rapid (<span
+                 class="thai">แกรนด์แรพพิด</span>)</a></li> <li><a
+               href="#amaranth">Amaranth (<span
+                 class="thai">ผักโขม</span>)</a></li> <li><a href="#kale">Kale
+               (<span class="thai">คะน้า</span>)</a></li>
           <li>💕</li>
         </ul>
-        
+      </div>
+
+      <div id="timemanagement">
+        circa 7 minutes reading
       </div>
 
       <section id="oakleaf">
@@ -63,7 +74,7 @@
           plate. </p>
 
           <p>Both green and red varieties are offered at <span
-               class="light-green">Jolly Green Farm</span>.</p>
+               class="dark-green">Jolly Green Farm</span>.</p>
 
           <div class="thai">
             <p> เป็นจริงตามชื่อ เพราะสลัดโอ๊คลีฟ มีรูปร่างเหมือนใบของต้นโอ๊ค ผักสลัดโอ๊คลีฟ
@@ -84,9 +95,9 @@
         </div>
 
         <div class="sectcontent">
-          <p>Romaine lettuce, also known as Cos lettuce - originating from the
-          Mediterranean island of Cos, has long, broad, upright leaves that hold
-          themselves bunched together as they mature.  Although romaine
+          <p>Romaine lettuce, also known as Cos lettuce &mdash; originating from
+          the Mediterranean island of Cos, has long, broad, upright leaves that
+          hold themselves bunched together as they mature.  Although romaine
           varieties are world-class well known for the hearts at the center of
           the heads, the outer leaves can also be used in salads or as a
           tortilla substitute for wraps.</p>
@@ -96,7 +107,7 @@
           of choice for Caesar salads.</p>
 
           <p>Both green and red varieties are offered at <span
-             class="light-green">Jolly Green Farm</span>.</p>
+             class="dark-green">Jolly Green Farm</span>.</p>
 
           <div class="thai">
             <p> โรเมน หรือที่รู้จักกันดีในชื่อ คอส เนื่องจากมีแหล่งกำเนิดมาจากเกาะคอส
@@ -123,14 +134,14 @@
           produced loosely in a whole head, are tender in taste, with a slight
           bitterness.</p>
 
-          <p>These very decorative lettuce types add a punch of colour, texture
+          <p>These very decorative lettuce types add a punch of colour, texture,
           and volume to salads. The curled leaves also have a practical function
           as they increase the surface area enabling salad dressings to be
           caught up in the leaf and not to the bottom of your salad bowl which
           make coral lettuce very popular in leafy salad mixes.</p>
 
           <p>Both green and red varieties are offered at <span
-             class="light-green">Jolly Green Farm</span>.</p>
+             class="dark-green">Jolly Green Farm</span>.</p>
 
           <div class="thai">
             <p> ผักสลัดโครอล มีลักษณะใบหยัก และมีรสชาติอ่อนๆ นุ่มๆ ออกขมเล็กน้อย
@@ -155,18 +166,18 @@
 
         <div class="sectcontent">
           <p>Frillice is a cross between iceberg lettuce and curly endive; the
-          leaves are green, thick and crisp like iceberg but the tops are
+          leaves are green, thick, and crisp like iceberg, but the tops are
           crinkled like curly endive. This is a very popular lettuce
           worldwide.</p>
 
-          <p>A crispy lettuce with an excellent taste, and very decorative. It’s
+          <p>A crispy lettuce with an excellent taste, and very decorative: it
           can be mixed with other types of lettuce or vegetables that are
           different in texture. Frillice Lettuce is at its best raw and as a
-          green salad as it adds a nice bit of bite and is a fresh element.
+          green salad, as it adds a nice bit of bite and is a fresh element.
           Frillice has come into popularity and made its name in the classic BLT
           (bacon, lettuce and tomato) sandwich.</p>
 
-          <p>Available all year round at <span class="light-green">Jolly Green
+          <p>Available all year round at <span class="dark-green">Jolly Green
             Farm</span>.</p>
 
           <div class="thai">
@@ -191,15 +202,15 @@
         
         <div class="sectcontent">
           <p>Butter head lettuce receives its name from the sweet tender buttery
-          flavour and delicate texture of the large, ruffled outer leaves. Also
-          known as Boston lettuce.</p>
+          flavour and delicate texture of the large, ruffled outer leaves.
+          They're also known as Boston lettuce.</p>
 
           <p>Butter head has an open loose leaf head and compact, crisp hearts.
           This is the sort of lettuce most prized in Europe, where our non-GMO
           seeds are from. This popular lettuce is a proper lettuce with an
           exquisite flavour.</p>
 
-          <p>Available all year round at <span class="light-green">Jolly Green
+          <p>Available all year round at <span class="dark-green">Jolly Green
             Farm</span>.</p>
 
           <div class="thai">
@@ -209,7 +220,8 @@
             บำรุงประสาท และป้องกันโลหิตจาง</p>
 
             <p> สลัดบัตเตอร์เฮดเป็นผักสลัดที่มักได้รับรางวัลจากการประกวดผักที่ยุโรปมากที่สุด
-            เมื่อเทียบกับผักสลัดชนิดอื่น ซึ่งยุโรปนั่นเอง คือแหล่งที่ Jolly Green Farm
+            เมื่อเทียบกับผักสลัดชนิดอื่น ซึ่งยุโรปนั่นเอง คือแหล่งที่ <span
+               class="dark-green">Jolly Green Farm</span>
             ซื้อเมล็ดพันธุ์ที่ไม่ได้รับการตัดต่อทางพันธุ์กรรม เข้ามาเพาะ จนเป็นผักที่มีคุณค่า
             รสชาติอร่อยถูกปาก เพื่อสุขภาพของคุณ ผักสลัดบัตเตอร์เฮดเป็นที่รู้จักกันในอีกชื่อหนึ่งคือ
             ผักสลัดบอสตัน</p>
@@ -229,14 +241,14 @@
           after harvesting, maintaining its crispness until the time they reach
           the dining table.</p>
 
-          <p>Very crisp like Romaine or Cos, sweet and juicy. A perfect leaf
-          base to build your salad, and can be mixed with other types of
-          lettuce. A mix of Batavia leaves are so popular with top chefs of
-          world-class restaurants. With its frilly crunchy leaves this lettuce
-          goes so well in any salad.</p>
+          <p>Very crisp like Romaine or Cos, sweet and juicy, it makes for a
+          perfect leaf base to build your salad, and can be mixed with other
+          types of lettuce. A mix of Batavia leaves are so popular with top
+          chefs of world-class restaurants. With its frilly crunchy leaves, this
+          lettuce goes so well in any salad.</p>
 
           <p>Both green and red varieties are offered at <span
-             class="light-green">Jolly Green Farm</span>.</p>
+             class="dark-green">Jolly Green Farm</span>.</p>
 
           <div class="thai">
             <p>ผักสลัดปัตตาเวีย หรือที่รู้จักกันอีกชื่อ คือ เฟรนช์ครีสพ์
@@ -266,15 +278,15 @@
 
         <div class="sectcontent">
           <p>Aptly named, one plant fills a salad bowl with no need to add other
-          lettuces. Salad Bowl is a variety of loose leaf lettuce with oakleaf
-          type leaves.</p>
+          lettuces. Salad Bowl is a variety of loose leaf lettuce with
+          oakleaf-type leaves.</p>
 
           <p>Crisp and tender with a sweet flavour. Large, deeply lobed, leaves.
           Slow to bolt, non-heading. The deep red and purple leaves are
           especially tender, with sweet and spicy tones.</p>
 
           <p>Both green and red varieties are offered at <span
-             class="light-green">Jolly Green Farm</span>.</p>
+             class="dark-green">Jolly Green Farm</span>.</p>
 
           <div class="thai">
             <p>สลัดโบวล์ ได้รับชื่อนี้เพราะเป็นผักสลัดชนิดที่มีความอร่อยครบอยู่ในตัว
@@ -298,21 +310,21 @@
           vegetable. It was also thought to possess medicinal properties by
           ancient people.</p>
 
-          <p>Fat free, saturated fat free, cholesterol free, low in sodium ,low
-          in calories, , a good source of manganese, and an excellent source to
-          vitamins A and K. Some of the health benefits of lettuce that have
-          been confirmed by modern scientific research include lowering
-          cholesterol levels, cancer control, protection of neurons, sleep
-          induction, anxiety control, lowering inflammation, and providing a
-          supply of antioxidants.</p>
+          <p>It is fat free, saturated fat free, cholesterol free, low in
+          sodium, low in calories, a good source of manganese, and an excellent
+          source to vitamins A and K. Some of the health benefits of lettuce
+          that have been confirmed by modern scientific research include
+          lowering cholesterol levels, cancer control, protection of neurons,
+          sleep induction, anxiety control, lowering inflammation, and providing
+          a supply of antioxidants.</p>
 
           <p>Lettuce is a mild-flavoured, leaf vegetable commonly used in salads
           and sandwiches. It is most often eaten raw, but it can also be
-          braised, steamed, sautéed and even grilled to create a different
+          braised, steamed, sautéed, and even grilled to create a different
           addition to an entrée or side dish.</p>
 
           <p>Green, purple, and red varieties are offered at <span
-             class="light-green">Jolly Green Farm.</a></p>
+             class="dark-green">Jolly Green Farm.</a></p>
 
           <div class="thai">
             <p>ผักกาดหอม ได้รับการยอมรับว่ามีคุณค่ามากกว่าการเป็นผัก มาเป็นเวลาหลายพันปีแล้ว
@@ -340,9 +352,9 @@
 
         <div class="sectcontent">
           <p>This is a large green leaf lettuce variety which are wavy and
-          curled at the edges. Crisp and tasty.</p>
+          curled at the edges. It is crisp and tasty.</p>
 
-          <p>Available all year round at <span class="light-green">Jolly Green
+          <p>Available all year round at <span class="dark-green">Jolly Green
             Farm</span>.</p>
 
           <div class="thai">
@@ -362,9 +374,9 @@
           traditional Ayurvedic medicine.</p>
 
           <p>Amaranth leaves are nutritionally similar to beets, Swiss chard and
-          spinach, but are much superior. For example amaranth leaves contain
-          three times more calcium and three times more niacin (vitamin B3) than
-          spinach leaves.</p>
+          spinach, but are much superior; they contain three times as much
+          calcium and three times as much niacin (vitamin B3) as spinach
+          leaves.</p>
 
           <p>Amaranth is much closer genetically to its wild ancestors than most
           vegetables. Amaranth leaves are an excellent source of carotene, iron,
@@ -374,7 +386,7 @@
           amaranth leaves as a great source of protein.</p>
 
           <p>Both green and red varities are available at <span
-            class="light-green">Jolly Green Farm</span>.</p>
+            class="dark-green">Jolly Green Farm</span>.</p>
 
           <div class="thai">
 
@@ -409,7 +421,7 @@
 
           <p>Kale is a green, leafy vegetable that is high in fiber.</p>
 
-          <p>The nutrients in kale can help boost wellbeing and prevent a range
+          <p>The nutrients in kale can help boost well-being and prevent a range
           of health problems. The nutrients it contains support healthy skin,
           hair, and bones. The fiber content enhances digestion and contributes
           to cardiovascular health. With more nutritional value than most green
@@ -417,10 +429,10 @@
           lower the risk of cancer, reduce blood pressure, reduce the risk of
           heart disease, and help prevent the development of asthma.</p>
 
-          <p>It can be a tasty and nutritious side dish or an addition to
+          <p>It can be a tasty and nutritious side dish, or an addition to
           smoothies and salads.</p>
 
-          <p>Available all year round at <span class="light-green">Jolly Green
+          <p>Available all year round at <span class="dark-green">Jolly Green
             Farm</span>.</p>
 
           <div class="thai">
