--- a/your-veggies.html
+++ b/your-veggies.html
@@ -131,8 +131,8 @@
 
         <div class="sectcontent">
           <p>This lettuce has frilly leaves and a mild flavour. The leaves are
-          produced loosely in a whole head, are tender in taste, with a slight
-          bitterness.</p>
+          produced loosely in a whole head, are tender in taste, and come with a
+          slight bitterness.</p>
 
           <p>These very decorative lettuce types add a punch of colour, texture,
           and volume to salads. The curled leaves also have a practical function
