Fix missing title

--- a/kb.html
+++ b/kb.html
@@ -5,7 +5,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Jolly Green</title>
+  <title>Jolly Green :: Knowledge base</title>
   <link rel="stylesheet" href="styles/main.css" type="text/css">
   <link rel="stylesheet" href="styles/kb.css" type="text/css">
 </head>
