--- a/kb.html
+++ b/kb.html
@@ -270,25 +270,10 @@
       </article>
 
       <div id="shopping">
-        <!-- Fix links -->
         <h1><a
-            href="https://www.facebook.com/JollyGreenFarm/posts/1697015966999389"
-            target="_blank">Jolly Green Farm Shopping
-            Experience</a></h1>
-        <div id="amisrtbl">
-          <div id="amisrsbj">
-            <p>See what's available this week on our weekly menu</p>
-            <div class="thai">
-              <p>สัปดาห์นี้มีอะไรให้ช๊อป</p>
-            </div>
-          </div>
-
-          <div id="amisrvrb">
-            @ <a
-              href="https://www.facebook.com/JollyGreenFarm/posts/1697015966999389"
-              target="_blank">Facebook</a>
-          </div>
-        </div>
+           href="https://www.facebook.com/JollyGreenFarm/posts/1697015966999389"
+           target="_blank">Jolly Green Farm Shopping Experience on Facebook
+           &nbsp;🛒</a></h1>
       </div>
     
     </div>
@@ -311,6 +296,8 @@
         <ul>
           <li><strong>Opening hours:</strong> 10 AM &ndash; 7 PM</li>
           <li><strong>Phone:</strong> 09 &ndash; 0534 &ndash; 9520</li>
+          <li><strong>Address:</strong> 13 Cholapatarn road, Patan, Muang Chiang
+            Mai 50300 Thailand
           <li><strong>Coördinates:</strong> <a
           href="https://www.google.se/maps/place/18%C2%B050'04.5%22N+98%C2%B059'20.5%22E/@18.83457,98.9884708,19z"
           target="_blank"><code>18.834583, 98.989028</code></a>
@@ -328,6 +315,11 @@
               <tr>
                 <th>Phone:</th>
                 <td>09 &ndash; 0534 &ndash; 9520</td>
+              </tr>
+              <tr>
+                <th>Address:</th>
+                <td>13 Cholapatarn road, Patan, Muang Chiang
+                  Mai 50300 Thailand</td>
               </tr>
               <tr>
                 <th>Coördinates:</th>
