--- a/your-veggies.html
+++ b/your-veggies.html
@@ -46,7 +46,7 @@
                href="#lettuce">Lettuce (<span
                  class="thai">ผักกาดหอม</span>)</a></li> 
                 <li><a href="#watercress">Watercress (<span
-                       class="thai">&hellip;</span>)</a></li> <li><a
+                       class="thai">วอเทอร์เครส</span>)</a></li> <li><a
                href="#grapid">Grand Rapid (<span
                  class="thai">แกรนด์แรพพิด</span>)</a></li> <li><a
                href="#amaranth">Amaranth (<span
@@ -365,7 +365,7 @@
           women in the post-menopausal years to improve cognition and reduce the
           risk of osteoporosis.</p> <p>Water cress could be consumed by those
           wanting to prevent as well as treat these types of conditions and is
-          recommended as a powerful “super food.”</p>
+          recommended as a powerful "super food."</p>
 
           <div class="thai"> <p>วอเทอร์เครส มีประโยชน์มากมายต่อสุขภาพ
             เนื่องจากมีสารอาหารที่มีคุณค่าสูง ช่วยเสริมสร้างภูมิคุ้มกัน ป้องกันมะเร็ง
