--- a/your-veggies.html
+++ b/your-veggies.html
@@ -349,7 +349,7 @@
 
       <section id="watercress">
         <div class="secthead">
-          <img src="images/your-veggies/watercress.png" alt="Watercress">
+          <img src="images/your-veggies/31watercress.png" alt="Watercress">
         </div>
 
         <div class="sectcontent"> <p>The health benefits of watercress include
@@ -495,6 +495,51 @@
             <p>คะน้า สามารถทานเป็นผักสด หรือใช้เป็นส่วนประกอบของสมูธตี้และสลัดชามอร่อยได้</p>
           </div>
         </div>
+      </section>
+
+      <section id="celery">
+        <div class="secthead"><img src="images/your-veggies/32celery.png"
+          alt="Celery"></div>
+
+        <div class="sectcontent">
+          <p>The benefits of celery begin with it being an excellent source of
+          <em>antioxidants</em> and beneficial enzymes, in addition to vitamins
+          and minerals such as <em>vitamin K</em>, <em>vitamin C</em>,
+          <em>potassium, folate</em> and <em>vitamin B6</em>.</p> <p>Top health
+          benefits of celery&hellip;</p> <ol> <li>Helps lower high
+            cholesterol</li> <li>Lowers inflammation</li> <li>Helps prevent or
+            treat high blood pressure</li> <li>Helps prevent ulcers</li>
+          <li>Protects liver health</li> <li>Beneficial for weight loss</li>
+          <li>Boosts digestion and reduces bloating</li> <li>Contains
+          anti-microbial properties that fight infections</li> <li>Helps prevent
+          urinary tract infections</li> <li>May help protect from cancer</li>
+          </ol> <p>Compared to boiling, roasting or blanching celery, steaming
+          celery keeps more antioxidants intact. Celery’s compounds, including
+          its flavonoids and polyphenols, are delicate nutrients that can be
+          lost when you overcook celery. So it’s best to eat celery raw or to
+          lightly cook it, such as steaming celery for a few minutes to soften
+          it. </p>
+
+          <div class="thai"> <p>คุณประโยชน์ของคึ่นช่าย
+            เริ่มจากการที่คึ่นช่ายอุดมไปด้วยสารต้านอนุมูลอิสระ
+            และเอนไซม์ที่เป็นประโยชน์ต่อร่างกายของเรา นอกเหนือไปจากนั้น
+            คึ่นช่ายยังประกอบไปด้วยวิตามินและเกลือแร่ที่สำคัญ เช่น วิตามินเค วิตามินซี โปตัสเซียม
+            โฟเลต และวิตามินบี 6</p> <p>คุณประโยชน์หลักๆ ที่คึ่นช่ายมีต่อร่างกายของเรา</p>
+              <ol> <li>ช่วยลดคอเลสเตอรอล</li> <li>ลดอาการอักเสบ</li>
+                <li>ช่วยป้องกันและรักษาโรคความดันโลหิตสูง</li>
+                <li>ช่วยป้องกันการเกิดแผลในระบบอวัยวะภายใน</li>
+                <li>ช่วยทำให้ตับแข็งแรงขึ้น</li> <li>มีประโยชน์ต่อการลดและควบคุมน้ำหนัก</li>
+                <li>ช่วยให้ระบบการย่อยอาหารทำงานได้ดี และลดอาการท้องอืด</li>
+                <li>มีสรรพคุณในการต้านเชื้อแบคทีเรีย และรักษาอาการติดเชื้อ</li>
+                <li>ช่วยป้องกันการติดเชื้อในระบบทางเดินปัสสาวะ</li>
+                <li>อาจช่วยป้องกันมะเร็งได้</li> </ol>
+              <p>คึ่นช่ายมีองค์ประกอบที่ให้กลิ่นและรสชาติที่เป็นเอกลักษณ์
+              และยังมีสารต้านอนุมูลอิสระและสารอาหารตัวอื่นๆ ที่สำคัญที่จะสูญเสียไปกับความร้อนสูง
+              ดังนั้น ถ้าจะให้ดีที่สุดควรทานคึ่นช่ายสด หรือผ่านความร้อนเพียงเล็กน้อย เช่นการนึ่งเพียง
+              2-3 นาที</p> </div>
+        </div>
+
+
       </section>
       </article>
 
