--- a/your-veggies.html
+++ b/your-veggies.html
@@ -52,6 +52,7 @@
                href="#amaranth">Amaranth (<span
                  class="thai">ผักโขม</span>)</a></li> <li><a href="#kale">Kale
                (<span class="thai">คะน้า</span>)</a></li>
+           <li><a href="#celery">Celery (<span class="thai">คึ่นช่าย</span>)</a></li>
           <li>💕</li>
         </ul>
       </div>
@@ -545,7 +546,7 @@
 
        <div id="shopping">
         <h1><a
-           href="https://www.facebook.com/JollyGreenFarm/posts/1697015966999389"
+           href="https://www.facebook.com/JollyGreenFarm/posts/1721501247884194"
            target="_blank">Jolly Green Farm Shopping Experience on Facebook
            &nbsp;🛒</a></h1>
       </div>
